Improved image sizing to prevent overflowing on small screens

--- a/src/_content.scss
+++ b/src/_content.scss
@@ -1,11 +1,16 @@
 .container {
     width: 65vw;
     min-width: 800px;
-    margin: 2rem auto 0;
+    margin: 0 auto;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    img {
+        max-width: 100%;
+        margin: 0 auto;
+    }
 
     .title {
         display: inline;
@@ -83,6 +88,7 @@
         width: 85vw;
         min-width: 0;
         padding: 0;
+        margin: 0 auto;
     }
 
     .news-content {
