--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -16,3 +16,13 @@
         }
     }
 }
+
+@media screen and (max-width: 800px) {
+    .footer {
+        flex-direction: column;
+
+        p {
+            margin-top: 0.5rem;
+        }
+    }
+}
