--- a/src/_header.scss
+++ b/src/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    width: 100vw;
+    width: 100%;
     min-height: 100px;
     display: flex;
     flex-direction: column;
@@ -153,7 +153,7 @@
             z-index: 20;
             margin-bottom: 0;
             ul {
-                width: 100vw;
+                width: 100%;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
