--- a/src/app.scss
+++ b/src/app.scss
@@ -14,7 +14,6 @@ body {
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
     background-color: $content-background;
-    overflow-x: hidden;
     font-family: 'Rubik', sans-serif;
 
     a {
